Updated to add arrow customization

--- a/multiple-date-picker-x.less
+++ b/multiple-date-picker-x.less
@@ -29,8 +29,10 @@
 }
 
 .multiple-date-picker-node{
+/*
   margin-right: -15px;
   margin-left: -15px;
+*/
 }
 
 .multiple-date-picker-group:before, .multiple-date-picker-group:after {
