--- a/multiple-date-picker-x.less
+++ b/multiple-date-picker-x.less
@@ -135,6 +135,12 @@
   cursor: pointer;
 }
 
+.picker-date.off-month {
+  color: transparent !important;
+  background-color: transparent !important;
+  border-color: transparent !important;
+}
+
 .picker-date.picker-selected{
   background-color: @pickable-date-picked-background;
   color: @pickable-date-picked-color;
